--- a/metaflux-frontend/package.json
+++ b/metaflux-frontend/package.json
@@ -20,7 +20,8 @@
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17",
     "viem": "^2.28.1",
-    "wagmi": "^2.15.0"
+    "wagmi": "^2.15.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
